# signac-kit

./: Cargo.toml  README.md
src/: extract.rs  group.rs  main.rs
