[package]
name = "signac-kit"
version = "0.1.0"
authors = ["Avi Srivastava <asrivastava@cs.stonybrook.edu>", "Tim Stuart <tstuart@nygenome.org>"]
edition = "2018"

description = """
signac-kit provides fast wrapper functions to the Signac R package for processing
ATAC-seq data.
"""

[[bin]]
path = "src/main.rs"
name = "sgk"

[dependencies]
clap = "2.33.1"
flate2 = "1.0.14"
log = "0.4.8"
pretty_env_logger = "0.4.0"
hashers = "1.0.1"
csv = "1.1"